--- a/EXO_JS_FONCTION/index.html
+++ b/EXO_JS_FONCTION/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./papillon.jpg" alt="image" id="img">
+    <img src="" alt="image" id="image">
 </body>
 </html>
 <script src="./EXO_JS_FONCTION.js"></script>
